[package]
name = "program"
version = "0.0.1"
edition = "2018"

[dependencies]
borsh = "0.9.3"
borsh-derive = "0.9.1"
solana-program = "~1.8.14"
spl-token = "3.2.0"
num-derive = "0.3"
num-traits = "0.2"
thiserror = "1.0"

[features]
no-entrypoint = []

[dev-dependencies]
solana-program-test = "~1.8.14"
solana-sdk = "~1.8.14"

[lib]
name = "predictchain"
crate-type = ["cdylib", "lib"]
